@@ -9,8 +9,9 @@ freebsd-buildutils (9.0-3) UNRELEASED; urgency=low
   * Remove getline kludge. The second part was unneeded, the first one
     caused version_gen.awk to hang.
   * Add __offsetof().
+  * Add nfssvc, closefrom and feature_present to unistd.h.
 
- -- Robert Millan <rmh@debian.org>  Sun, 29 Jan 2012 01:55:23 +0100
+ -- Robert Millan <rmh@debian.org>  Sun, 29 Jan 2012 02:59:15 +0100
 
 freebsd-buildutils (9.0-2) unstable; urgency=low
 
